refactor(package): update package references and ESLint configurations to align with new naming convention
- Changed package name prefix from `@repo` to `@vernisai` in various package.json files
- Updated ESLint configurations to reference the new package names
- Adjusted TypeScript configuration extends to use the new naming scheme
- Modified import statements in the web app to reflect the updated package names

--- a/changes/2025-03-24.md
+++ b/changes/2025-03-24.md
@@ -30,3 +30,11 @@
 - Created design system documentation with component specifications
 - Outlined monorepo structure and UI component organization
 - Provided detailed component breakdown and implementation roadmaps
+
+## Package Reference Configuration Update - 02:19 pm
+
+- Changed package name prefix from `@repo` to `@vernisai` to align with project branding
+- Updated all package.json files to use the new prefix
+- Updated all import references to use the new prefix
+- Updated ESLint configurations to reference the new package names
+- Fixed build and lint scripts to work with the new naming scheme
