feat(ci): add GitHub Actions workflow and PR template
- Introduced a GitHub Actions workflow for pull request checks, including linting, formatting, documentation validation, and build steps
- Created a pull request template to standardize PR submissions and improve clarity on changes and testing

--- a/changes/2025-03-24.md
+++ b/changes/2025-03-24.md
@@ -38,3 +38,10 @@
 - Updated all import references to use the new prefix
 - Updated ESLint configurations to reference the new package names
 - Fixed build and lint scripts to work with the new naming scheme
+
+## GitHub Actions Workflow for Pull Requests - 10:22 AM
+
+- Added GitHub Actions workflow that runs on PR creation and updates
+- Implemented CI pipeline with linting, formatting, documentation validation, and build steps
+- Created PR template following project standards
+- Configured workflow to use Node.js 20 and npm caching for faster builds
