Add GitHub issue templates for features and bugs

--- a/changes/2025-03-24.md
+++ b/changes/2025-03-24.md
@@ -92,3 +92,10 @@
 - Configured workflows to use local caching only for Turborepo
 - Maintained local caching for improved build performance
 - Simplified workflow configuration for easier maintenance
+
+## Added GitHub Issue Templates - 03:28 PM
+
+- Created Feature Request template with standardized sections for structured feature requests
+- Created Bug Report template with detailed fields for reporting issues
+- Added issue template configuration file to organize contribution options
+- Disabled blank issues to encourage use of templates for better issue tracking
